[gd_scene load_steps=7 format=2]

[ext_resource path="res://fonts/PublicPixel-z84yD.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scripts/Controls_Picker.gd" type="Script" id=2]
[ext_resource path="res://sounds/Gunc.wav" type="AudioStream" id=3]

[sub_resource type="DynamicFont" id=1]
size = 20
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 14.5, 20 )

[sub_resource type="DynamicFont" id=3]
size = 15
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[node name="Controls_Picker" type="Node2D"]
script = ExtResource( 2 )

[node name="LeftnRight" type="Node2D" parent="."]
position = Vector2( -1, -2 )
scale = Vector2( 1.1, 1.2 )

[node name="Right" type="Label" parent="LeftnRight"]
margin_left = 86.4545
margin_top = -20.0
margin_right = 110.454
margin_bottom = 8.0
rect_scale = Vector2( 1, 1.5 )
custom_fonts/font = SubResource( 1 )
text = ">"

[node name="Left" type="Label" parent="LeftnRight"]
margin_left = -86.4545
margin_top = -20.0
margin_right = -57.4545
margin_bottom = 8.0
rect_scale = Vector2( 1, 1.5 )
custom_fonts/font = SubResource( 1 )
text = "<"

[node name="RightBtn" type="Area2D" parent="."]
position = Vector2( 99, -2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="RightBtn"]
shape = SubResource( 2 )

[node name="LeftBtn" type="Area2D" parent="."]
position = Vector2( -83, -2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftBtn"]
shape = SubResource( 2 )

[node name="ControlText" type="Label" parent="."]
margin_left = -51.0
margin_top = -16.0
margin_right = 216.0
margin_bottom = 27.0
rect_scale = Vector2( 1, 1.5 )
custom_fonts/font = SubResource( 3 )
text = "arrows"

[node name="Click" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = 12.0
pitch_scale = 2.0

[connection signal="input_event" from="RightBtn" to="." method="_on_RightBtn_input_event"]
[connection signal="input_event" from="LeftBtn" to="." method="_on_LeftBtn_input_event"]
